@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model

class Collaborator {
    name
    dateOfBirth
    admissionDate
    phoneNumber
    taxpayerNumber
    email
}

class Address {
    street
    doorNumber
}

class PostCode{
    postCodeNumber
    localization
}

class GreenSpaceManager {
}

class GreenSpace {
    name
    area
}

class Garden {
}

class MediumPark {
}

class LargePark {
}

class TaskToDoList{
    taskReference
    status
    urgency
    aproxExpectedDuration
}

class TaskAgenda{
    startDate
    expectedDuration
}

class Agenda{
}

Address "1..*" - "1" PostCode : has >

'-------------Collaborator-------------
GreenSpaceManager  -l|>  Collaborator
Address "1" -r "1..*" Collaborator : lives <

'-------------GreenSpaceManager-------------
GreenSpaceManager "1..*" - "1..*" TaskAgenda : inserts new entry >

'-------------GreenSpace-------------
GreenSpace <|-- MediumPark
GreenSpace <|-- Garden
GreenSpace <|-- LargePark
GreenSpace "1" - "1" Address : is located in >

'-------------Task-------------
TaskAgenda "1..*" -u-- "1" GreenSpace :  Carried out in  >
TaskToDoList "1..*" --- "1" GreenSpace :  Carried out in  >
Agenda "1" - "*" TaskAgenda : contains >
TaskAgenda "1" -u "1" TaskToDoList : includes >

@enduml
